examples/test/testpolicy10115.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10115
  namespace: namespace220
spec:
  podSelector:
    matchLabels:
      key27: value47
      key38: value39
      key24: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value42
      podSelector:
        matchLabels:
          key47: value36
